agrega embed-resources para html y prefer-html para pdf, para que los html sean un archivo unico y los pdf tomen captura de figuras interactivas

--- a/G4101_Intro_Quarto.qmd
+++ b/G4101_Intro_Quarto.qmd
@@ -10,11 +10,13 @@ highlight-style: pygments
 theme: sandstone
 format:
   html:
+    embed-resources: true
     code-fold: true
     code-summary: "Codigo"
     code-tools: true
     html-math-method: katex
-  pdf: default
+  pdf: 
+    prefer-html: false
   docx: default
 # knitr: 
 #   opts_chunk: 
