--- a/G4101_lab11_secuencias.qmd
+++ b/G4101_lab11_secuencias.qmd
@@ -10,6 +10,7 @@ highlight-style: pygments
 theme: sandstone
 format:
   html:
+    embed-resources: true
     code-fold: true
     code-summary: "Codigo"
     code-tools: true
