en direccional se cambia nomenclatura por senos y cosenos, en geoestadistica se eliminan las partes del paquete sp

--- a/G4101_lab10_estadistica_direccional.qmd
+++ b/G4101_lab10_estadistica_direccional.qmd
@@ -82,9 +82,9 @@ N = length(theta)
 ### Componentes del vector medio
 
 ```{r}
-x = sum(sin(thetarad))
-y = sum(cos(thetarad))
-meanrad = atan(x/y) # direccion media en radianes
+S = sum(sin(thetarad))
+C = sum(cos(thetarad))
+meanrad = atan(S/C) # direccion media en radianes
 meandeg = degs(meanrad) # direccion media en grados
 ```
 
@@ -94,8 +94,8 @@ Para datos no-direccionales hay que dividir por 2 la direccion verdadera.
 
 ```{r}
 meantrue = case_when(
-  x > 0 & y > 0 ~ meandeg,
-  x < 0 & y > 0 ~ meandeg + 360,
+  S > 0 & C > 0 ~ meandeg,
+  S < 0 & C > 0 ~ meandeg + 360,
   .default = meandeg + 180
 )
 meantrue
@@ -112,8 +112,8 @@ meantrue = ifelse(d == 0, meantrue/2, meantrue)
 -   $\kappa$: parametro de concentracion
 
 ```{r}
-(R = sqrt(x^2+y^2)) # resultante
-(Rbar = sqrt(x^2+y^2)/N) # resultante media
+(R = sqrt(S^2+C^2)) # resultante
+(Rbar = sqrt(S^2+C^2)/N) # resultante media
 (V = 1-Rbar) # varianza circular
 (v = sqrt(-2*log(Rbar))) # desviacion estandar circular
 (k.ml = case_when(Rbar < .53 ~ 2*Rbar + Rbar^3 + 5/6*Rbar^5,
@@ -162,7 +162,7 @@ cono_inf; meantrue; cono_sup
 Diagrama de rosos mostrando la direccion media y cono de confianza
 
 ```{r}
-rose_diag_2D(x = theta0, width = 30, dir = d, conf.level = .95)
+rose_diag_2D(x = theta, width = 10, dir = d, conf.level = 1-a)
 ```
 
 ## Analisis de dos muestras
@@ -191,8 +191,7 @@ theta2rad = rads(theta2)
 thetaall = c(theta,theta2)
 thetaallrad = rads(thetaall)
 Nall = length(thetaall)
-(Rt = circ.disp(thetaallrad)[[2]])
-(kt = est.kappa(thetaallrad))
+circ.disp(thetaallrad)
 ```
 
 ### Igualdad de parametro de concentracion
@@ -207,6 +206,8 @@ qf(1-a,length(theta)-1,length(theta2)-1)
 ```{r}
 (R1 = circ.disp(thetarad)[[2]])
 (R2 = circ.disp(theta2rad)[[2]])
+(Rt = circ.disp(thetaallrad)[[2]])
+(kt = est.kappa(thetaallrad))
 
 (f = ifelse(kt > 2, 
            ((Nall - 2)*(R1+R2-Rt))/(Nall-R1-R2),
@@ -272,33 +273,34 @@ Directional::circ.summary(theta,rads = F)
 ## Dos+ muestras
 
 ```{r}
-grps = c(rep(1:2,
-             c(length(theta),length(theta2))))
+grps = rep(1:2,
+           c(length(theta),length(theta2)))
 ```
 
 ### Prueba de parametro de concentracion
 
 ```{r}
 conc.test(u = thetaall,
-          ina = grps) # 2+
+          ina = grps,
+          rads = F) # 2+
 ```
 
 ### Prueba de direccion media
 
 ```{r}
 # Parametros de concentracion iguales
-watson.williams.test(list(thetac,theta2c)) # 2+
+watson.williams.test(list(thetac, theta2c)) # 2+
 
-rao.homogeneity(list(thetarad,theta2rad)) # 2+
+rao.homogeneity(list(thetarad, theta2rad)) # 2+
 
-hcfcirc.boot(thetarad,theta2rad) # 2
-hcf.circaov(thetaall,grps) # 2+
+hcfcirc.boot(thetarad, theta2rad, rads = T) # 2
+hcf.circaov(thetaall, grps, rads = F) # 2+
 
-lrcirc.boot(thetarad,theta2rad) # 2
-lr.circaov(thetaall,grps) # 2+
+lrcirc.boot(thetarad, theta2rad, rads = T) # 2
+lr.circaov(thetaall, grps, rads = F) # 2+
 
 # Parametros de concentracion diferentes
-hetcirc.boot(thetarad,theta2rad) # 2
-het.circaov(thetaall,grps) # 2+
+hetcirc.boot(thetarad, theta2rad, rads = T) # 2
+het.circaov(thetaall, grps, rads = F) # 2+
 ```
 
